--- a/monitoring/monitoring-webservice/src/main/webapp/index.html
+++ b/monitoring/monitoring-webservice/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!html>
 <html>
         <head>
-                <title>SEE - Invoker</title>
+                <title>SEE - invocation</title>
                 <meta http-equiv="REFRESH" content="0;url=services">
         </head>
         <body>
