--- a/discovery/webservice/src/main/webapp/index.html
+++ b/discovery/webservice/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
         <head>
                 <title>MSEE Discovery Service</title>
-                <meta http-equiv="REFRESH" content="0;url=service/discovery?wsdl2">
+                <meta http-equiv="REFRESH" content="0;url=services/discovery?wsdl2">
         </head>
         <body>
         </body>
