IN PROGRESS - task 186: Discovery for RESTful services http://redmine.sesa.sti2.at/issues/show/186

--- a/discovery/core/src/test/resources/services/hrests1.html
+++ b/discovery/core/src/test/resources/services/hrests1.html
@@ -4,7 +4,7 @@
 	</p>
 	<p>
 		<span class="label">ACME Hotels</span> is a <a rel="model"
-			href="http://msee.sti2.at/categories#BUSINESS"> hotel reservation</a>
+			href="http://msee.sti2.at/categories#business"> hotel reservation</a>
 		service.
 	</p>
 
