--- a/discovery/core/src/test/resources/services/hrests1.html
+++ b/discovery/core/src/test/resources/services/hrests1.html
@@ -15,7 +15,7 @@
 			is invoked using the method <span class="method">GET</span> at
 			<code class="address"> http://example.com/h/{id} </code>
 			, with <span class="input">the ID of the particular hotel
-				replacing the parameter <code>id</code>.
+				replacing the parameter <code class="label">id</code>.
 			</span> It returns <span class="output">the hotel details in an <code>
 					ex:hotelInformation </code> document.
 			</span> <span class="input">A particular hotel ID replaces the param
